make entire beer list item a link, and fix image squish effect

--- a/app/assets/stylesheets/beer_index_item.scss
+++ b/app/assets/stylesheets/beer_index_item.scss
@@ -2,6 +2,13 @@
   background-color: #f5f2e8;
 }
 
+.beers-index-item:hover {
+  cursor: pointer;
+  // border: 1px solid black;
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+
+}
+
 .beers-index-item {
   background: white;
   width: 900px;
@@ -51,12 +58,13 @@ h5 {
 
 .beer {
   color:#d68239;
+  font-size: 20px;
 }
 
-.beer:hover {
-  color:#ffcb00;
-  cursor: pointer;
-}
+// .beer:hover {
+//   color:#ffcb00;
+//   cursor: pointer;
+// }
 
 .beer-name a {
   text-decoration: none;
@@ -166,4 +174,6 @@ h5 {
   flex-direction: initial;
   height: 100px;
   width: 100px;
+  max-width: 100%;
+  height: auto;
 }
